force-app/main/default/objects/Sales_Opportunity__c/Sales_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Custom Sales Opportunity Object</description>
    <label>Sales Opportunity</label>
    <nameField>
        <displayFormat>SO-{YYYYMM}-{000000}</displayFormat>
        <label>Sales Opportunity  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>