force-app/main/default/objects/Sales_Opportunity__c/fields/Salesman_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Email__c</fullName>
    <description>Sales Consultant&apos;s Email</description>
    <inlineHelpText>Sales Consultant&apos;s Email</inlineHelpText>
    <label>Salesman&apos;s Email</label>
    <type>Email</type>
</CustomField>