force-app/main/default/objects/Sales_Opportunity__c/fields/Salesman_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Mobile__c</fullName>
    <description>Sales Consultant&apos;s Mobile</description>
    <inlineHelpText>Sales Consultant&apos;s Mobile</inlineHelpText>
    <label>Salesman&apos;s Mobile</label>
    <type>Phone</type>
</CustomField>