force-app/main/default/objects/Sales_Opportunity__c/recordTypes/RA_Sales_Opportunity_RT.recordType-meta.xml
<RecordType>
    <fullName>RA_Sales_Opportunity_RT</fullName>
    <active>true</active>
    <label>RA Sales Opportunity RT</label>
</RecordType>