force-app/main/default/objects/Sales_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Person_Account_Profiling__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Salesman_Name__c</columns>
    <columns>Salesman_Email__c</columns>
    <columns>Salesman_Mobile__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>